Add Explosive and Obstacle classes; implement door interactions and update ICoop logic